--- a/.github/workflows/dashboards-notifications-test-and-build-workflow.yml
+++ b/.github/workflows/dashboards-notifications-test-and-build-workflow.yml
@@ -177,7 +177,7 @@ jobs:
         with:
           working-directory: OpenSearch-Dashboards/plugins/dashboards-notifications
           command: yarn run cypress run
-          wait-on: 'http://localhost:5601/app/home#/'
+          wait-on: 'http://localhost:9200,http://localhost:5601/app/home#/'
           wait-on-timeout: 300
         env:
           CYPRESS_CACHE_FOLDER: ${{ matrix.cypress_cache_folder }}
